--- a/README.rdoc
+++ b/README.rdoc
@@ -74,7 +74,7 @@ action_は メソッドを定義する
 
 helper のスペックを記述するヘルパー
 
-helper で BasicObject のインスタンスを返す
+helper で Object のインスタンスを返す
 
 mixin で helper にモジュールをミックスインする
 
