--- a/README.rdoc
+++ b/README.rdoc
@@ -27,12 +27,14 @@ features/support/path.rb に以下を記述
 * 'member'一覧
 * 'member'新規作成
 * 'member'新規作成エラー
-* 'member(name:田中)'詳細
-* 'member(name:田中)'編集
-* 'member(name:田中)'編集エラー
-* 'member(name:田中)'の'member_log'一覧
+* 'member(name=田中)'詳細
+* 'member(name=田中)'編集
+* 'member(name=田中)'編集エラー
+* 'member(name=田中)'の'member_log'一覧
 
-* 'member_log(member.name:田中)'詳細
+* 'member_log(member.name=田中)'詳細
+
+* 'member'一覧(send)
 
 基本的に、 'controller'の{action} というようにパスを指定する
 
@@ -40,9 +42,32 @@ features/support/path.rb に以下を記述
 
 controller の後ろに、カッコで括って条件を指定できる
 
-has_one の関係なら、 (member_log.member.name:田中) というように、チェーン表記することが出来る
+has_one の関係なら、 (member_log.member.name=田中) というように、チェーン表記することが出来る
 
-複数のカラムで検索する場合、 member_log(action_type:3000,member.name:田中) というように指定する
+複数のカラムで検索する場合、 member_log(action_type=3000,member.name=田中) というように指定する
+
+"'member'一覧(send)" は、 resource member の collection :send なパス : send_members に整形される
+
+日付時刻カラムは *_H=時間 で指定することができ、「時間」部分は Time.parse で処理される
+
+
+== ans-feature-helpers/step_definitions/model_steps.rb
+
+step_definitions のどれかで require することで、以下の step が追加される
+
+
+=== 以下の"..."をクリアする
+
+... には Member 等を指定すると、 Member.delete_all する
+
+
+=== 以下の"..."が存在する:
+
+... には例えば Member 等を指定すると、 Member のデータを用意する
+
+has_one の関係なら、 member_log.member.name というように、チェーンでカラムを指定できる
+
+日付時刻カラムは *_H=時間 で指定することができ、「時間」部分は Time.parse で処理される
 
 
 == ActionHelper
