存在することを確認するステップで型比較が発生しないように修正

--- a/README.rdoc
+++ b/README.rdoc
@@ -80,6 +80,8 @@ has_one の関係なら、 member_log.member.name というように、チェー
 
 複数のキーを指定する必要がある場合、カンマで区切る
 
+各値は、互いに to_s した形式で比較されるので、少々あれかもしれない
+
 
 === 以下の"..."が存在しないこと:
 
