モデルの内容を更新するステップの追加

--- a/README.rdoc
+++ b/README.rdoc
@@ -87,6 +87,17 @@ Fabricate で用意したデータを投入する
 FactoryGirl.create で用意したデータを投入する
 
 
+=== 前提 "..."が以下である:
+
+ 前提 "Member(login_id)"が以下である:
+   | login_id | name | memo |
+   | hoge | 田中角栄 | 備考 |
+
+カッコの中に指定したカラムで find_by_* して、テーブルで指定したカラムを上書きする
+
+複数のキーを指定する必要がある場合、カンマで区切る
+
+
 === ならば 以下の"..."が存在すること:
 
  ならば 以下の"Member(login_id)"が存在すること:
